<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/view_common_toolbar" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgetPass_telNumWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/forgetPass_edt_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forgetPass_edt_num"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/forgetPass_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_shape"
        android:text="@string/forgetPass_btn" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/forgetPass_tv_tips" />


</LinearLayout>